fix ios overflow issue

--- a/src/components/overview/overview.module.scss
+++ b/src/components/overview/overview.module.scss
@@ -12,6 +12,7 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  position:relative;
 
   &_bio {
     height: 100%;
